<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <include
        android:id="@+id/title_image"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        layout="@layout/view_title_image" />

    <include
        android:id="@+id/title_text"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/title_image"
        layout="@layout/view_title_text" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerVertical="true"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/buy_qr_flow_display_1"
                android:textColor="@color/black"
                android:textSize="@dimen/text_large_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerVertical="true"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/buy_qr_flow_display_2"
                android:textColor="@color/black"
                android:textSize="@dimen/text_large_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerVertical="true"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/buy_qr_flow_display_3"
                android:textColor="@color/black"
                android:textSize="@dimen/text_large_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerVertical="true"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/buy_qr_flow_display_4"
                android:textColor="@color/black"
                android:textSize="@dimen/text_large_size" />
        </LinearLayout>
    </LinearLayout>

    <include
        android:id="@+id/bottom_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_above="@+id/bottom_text"
        layout="@layout/view_bottom_button" />

    <include
        android:id="@+id/bottom_text"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        layout="@layout/view_bottom_text" />

</RelativeLayout>