<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <include
        android:id="@+id/title_image"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        layout="@layout/view_title_image" />

    <include
        android:id="@+id/title_text"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/title_image"
        layout="@layout/view_title_text" />

    <RelativeLayout
        android:id="@+id/wifi_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_text"
        android:layout_marginTop="50dp" >

        <TextView
            android:id="@+id/wifi_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="200dp"
            android:text="@string/wifi_default"
            android:textColor="@color/black"
            android:textSize="@dimen/text_large_size" />

        <Button
            android:id="@+id/wifi_btn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="200dp"
            android:text="@string/wifi_set_btn"
            android:textColor="@color/black"
            android:textSize="@dimen/text_large_size" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/date_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/wifi_layout"
        android:layout_marginTop="50dp" >

        <TextView
            android:id="@+id/date_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="200dp"
            android:textColor="@color/black"
            android:textSize="@dimen/text_large_size" />

        <Button
            android:id="@+id/date_btn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="200dp"
            android:text="@string/date_set_btn"
            android:textColor="@color/black"
            android:textSize="@dimen/text_large_size" />
    </RelativeLayout>

    <include
        android:id="@+id/bottom_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_above="@+id/bottom_text"
        layout="@layout/view_bottom_button" />

    <include
        android:id="@+id/bottom_text"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        layout="@layout/view_bottom_text" />

</RelativeLayout>