<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray" >

    <include
        android:id="@+id/title_image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_logo_layout"
        android:layout_alignParentTop="true"
        layout="@layout/view_title_image" />

    <include
        android:id="@+id/title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_image"
        layout="@layout/view_title_text" />

    <RelativeLayout
        android:id="@+id/name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_text"
        android:layout_marginTop="70px" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="436px"
            android:layout_toLeftOf="@+id/name_edit"
            android:text="@string/admin_name"
            android:textColor="@color/black"
            android:textSize="@dimen/text_large_size" />

        <EditText
            android:id="@+id/name_edit"
            android:layout_width="360px"
            android:layout_height="55px"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="200px"
            android:textColor="@color/black"
            android:textSize="@dimen/text_large_size" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_layout"
        android:layout_marginTop="30px" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="436px"
            android:layout_toLeftOf="@+id/password_edit"
            android:text="@string/admin_password"
            android:textColor="@color/black"
            android:textSize="@dimen/text_large_size" />

        <EditText
            android:id="@+id/password_edit"
            android:layout_width="360px"
            android:layout_height="55px"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="200px"
            android:textColor="@color/black"
            android:textSize="@dimen/text_large_size" />
    </RelativeLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="220px"
        android:layout_height="55px"
        android:layout_below="@+id/password_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30px"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="@dimen/text_large_size" />

    <include
        android:id="@+id/bottom_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_bottom_button_layout"
        android:layout_above="@+id/bottom_text"
        layout="@layout/view_bottom_button" />

    <include
        android:id="@+id/bottom_text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_bottom_text_layout"
        android:layout_alignParentBottom="true"
        layout="@layout/view_bottom_text" />

</RelativeLayout>